src/main/java/org/as3commons/asblocks/parser/antlr/e4x/E4XParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g 2011-07-28 18:48:41

package org.as3commons.asblocks.parser.antlr.e4x;
import org.as3commons.asblocks.parser.antlr.LinkedListTree;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class E4XParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMPILATION_UNIT", "XML_ROOT_ELEMENT", "XML_EMPTY_ELEMENT", "XML_ELEMENT", "XML_ELEMENT_CONTENT", "XML_TAG_CONTENT", "XML_ATTRIBUTE", "XML_LIST", "XML_COMMENT", "XML_CDATA", "XML_PI", "XML_LCHEVRON", "RCLOSE", "XML_RCHEVRON", "LCLOSE", "XML_NAME", "XML_TEXT", "XML_ATTRIBUTE_VALUE", "WS", "EOL", "XML_NAME_START", "XML_NAME_PART", "UNICODE_LETTER", "UNICODE_DIGIT", "'<>'", "'</>'", "'{'", "'}'", "'='"
    };
    public static final int EOF=-1;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int COMPILATION_UNIT=4;
    public static final int XML_ROOT_ELEMENT=5;
    public static final int XML_EMPTY_ELEMENT=6;
    public static final int XML_ELEMENT=7;
    public static final int XML_ELEMENT_CONTENT=8;
    public static final int XML_TAG_CONTENT=9;
    public static final int XML_ATTRIBUTE=10;
    public static final int XML_LIST=11;
    public static final int XML_COMMENT=12;
    public static final int XML_CDATA=13;
    public static final int XML_PI=14;
    public static final int XML_LCHEVRON=15;
    public static final int RCLOSE=16;
    public static final int XML_RCHEVRON=17;
    public static final int LCLOSE=18;
    public static final int XML_NAME=19;
    public static final int XML_TEXT=20;
    public static final int XML_ATTRIBUTE_VALUE=21;
    public static final int WS=22;
    public static final int EOL=23;
    public static final int XML_NAME_START=24;
    public static final int XML_NAME_PART=25;
    public static final int UNICODE_LETTER=26;
    public static final int UNICODE_DIGIT=27;

    // delegates
    // delegators


        public E4XParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public E4XParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return E4XParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g"; }


    	// disable standard error handling; be strict
    	//protected void mismatch(IntStream input, int ttype, BitSet follow)
    	//	throws RecognitionException
    	//{
    	//	throw new MismatchedTokenException(ttype, input);
    	//}

    	private E4XLexer lexer;
    	private CharStream cs;

    	public void setInput(E4XLexer lexer, CharStream cs)
    	{
    		this.lexer = lexer;
    		this.cs = cs;
    	}

    	/**
    	 * Returns the input left unconsumed after the last parse operation.
    	 * Because of lookahead in the parser, there is no guarantee that the
    	 * lexer has not consumed input ahead of the current parse-point for
    	 * any abritrary rule. This method is only intended to grab the
    	 * remaining input after recognising 'xmlPrimary'.
    	 */
    	public String getInputTail()
    	{
    		return cs.substring(cs.index() - 1, cs.size() - 1);
    	}


    public static class compilationUnit_return extends ParserRuleReturnScope {
        LinkedListTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "compilationUnit"
    // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:86:1: compilationUnit : xmlPrimary -> ^( COMPILATION_UNIT xmlPrimary ) ;
    public final E4XParser.compilationUnit_return compilationUnit() throws RecognitionException {
        E4XParser.compilationUnit_return retval = new E4XParser.compilationUnit_return();
        retval.start = input.LT(1);

        LinkedListTree root_0 = null;

        E4XParser.xmlPrimary_return xmlPrimary1 = null;


        RewriteRuleSubtreeStream stream_xmlPrimary=new RewriteRuleSubtreeStream(adaptor,"rule xmlPrimary");
        try {
            // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:87:2: ( xmlPrimary -> ^( COMPILATION_UNIT xmlPrimary ) )
            // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:87:4: xmlPrimary
            {
            pushFollow(FOLLOW_xmlPrimary_in_compilationUnit119);
            xmlPrimary1=xmlPrimary();

            state._fsp--;

            stream_xmlPrimary.add(xmlPrimary1.getTree());


            // AST REWRITE
            // elements: xmlPrimary
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (LinkedListTree)adaptor.nil();
            // 88:3: -> ^( COMPILATION_UNIT xmlPrimary )
            {
                // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:88:6: ^( COMPILATION_UNIT xmlPrimary )
                {
                LinkedListTree root_1 = (LinkedListTree)adaptor.nil();
                root_1 = (LinkedListTree)adaptor.becomeRoot((LinkedListTree)adaptor.create(COMPILATION_UNIT, "COMPILATION_UNIT"), root_1);

                adaptor.addChild(root_1, stream_xmlPrimary.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (LinkedListTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
             finally {
        }
        return retval;
    }
    // $ANTLR end "compilationUnit"

    public static class xmlPrimary_return extends ParserRuleReturnScope {
        LinkedListTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "xmlPrimary"
    // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:91:1: xmlPrimary : ( xmlInitialiser | xmlListInitialiser ) -> ^( XML_ROOT_ELEMENT xmlInitialiser ( xmlListInitialiser )? ) ;
    public final E4XParser.xmlPrimary_return xmlPrimary() throws RecognitionException {
        E4XParser.xmlPrimary_return retval = new E4XParser.xmlPrimary_return();
        retval.start = input.LT(1);

        LinkedListTree root_0 = null;

        E4XParser.xmlInitialiser_return xmlInitialiser2 = null;

        E4XParser.xmlListInitialiser_return xmlListInitialiser3 = null;


        RewriteRuleSubtreeStream stream_xmlInitialiser=new RewriteRuleSubtreeStream(adaptor,"rule xmlInitialiser");
        RewriteRuleSubtreeStream stream_xmlListInitialiser=new RewriteRuleSubtreeStream(adaptor,"rule xmlListInitialiser");
        try {
            // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:92:2: ( ( xmlInitialiser | xmlListInitialiser ) -> ^( XML_ROOT_ELEMENT xmlInitialiser ( xmlListInitialiser )? ) )
            // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:92:4: ( xmlInitialiser | xmlListInitialiser )
            {
            // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:92:4: ( xmlInitialiser | xmlListInitialiser )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( ((LA1_0>=XML_COMMENT && LA1_0<=XML_LCHEVRON)) ) {
                alt1=1;
            }
            else if ( (LA1_0==28) ) {
                alt1=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }
            switch (alt1) {
                case 1 :
                    // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:92:6: xmlInitialiser
                    {
                    pushFollow(FOLLOW_xmlInitialiser_in_xmlPrimary144);
                    xmlInitialiser2=xmlInitialiser();

                    state._fsp--;

                    stream_xmlInitialiser.add(xmlInitialiser2.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:92:23: xmlListInitialiser
                    {
                    pushFollow(FOLLOW_xmlListInitialiser_in_xmlPrimary148);
                    xmlListInitialiser3=xmlListInitialiser();

                    state._fsp--;

                    stream_xmlListInitialiser.add(xmlListInitialiser3.getTree());

                    }
                    break;

            }



            // AST REWRITE
            // elements: xmlListInitialiser, xmlInitialiser
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (LinkedListTree)adaptor.nil();
            // 93:3: -> ^( XML_ROOT_ELEMENT xmlInitialiser ( xmlListInitialiser )? )
            {
                // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:93:6: ^( XML_ROOT_ELEMENT xmlInitialiser ( xmlListInitialiser )? )
                {
                LinkedListTree root_1 = (LinkedListTree)adaptor.nil();
                root_1 = (LinkedListTree)adaptor.becomeRoot((LinkedListTree)adaptor.create(XML_ROOT_ELEMENT, "XML_ROOT_ELEMENT"), root_1);

                adaptor.addChild(root_1, stream_xmlInitialiser.nextTree());
                // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:93:41: ( xmlListInitialiser )?
                if ( stream_xmlListInitialiser.hasNext() ) {
                    adaptor.addChild(root_1, stream_xmlListInitialiser.nextTree());

                }
                stream_xmlListInitialiser.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (LinkedListTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
             finally {
        }
        return retval;
    }
    // $ANTLR end "xmlPrimary"

    public static class xmlInitialiser_return extends ParserRuleReturnScope {
        LinkedListTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "xmlInitialiser"
    // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:96:1: xmlInitialiser : ( xmlMarkup )* xmlElement ;
    public final E4XParser.xmlInitialiser_return xmlInitialiser() throws RecognitionException {
        E4XParser.xmlInitialiser_return retval = new E4XParser.xmlInitialiser_return();
        retval.start = input.LT(1);

        LinkedListTree root_0 = null;

        E4XParser.xmlMarkup_return xmlMarkup4 = null;

        E4XParser.xmlElement_return xmlElement5 = null;



        try {
            // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:97:2: ( ( xmlMarkup )* xmlElement )
            // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:97:4: ( xmlMarkup )* xmlElement
            {
            root_0 = (LinkedListTree)adaptor.nil();

            // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:97:4: ( xmlMarkup )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( ((LA2_0>=XML_COMMENT && LA2_0<=XML_PI)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:97:4: xmlMarkup
            	    {
            	    pushFollow(FOLLOW_xmlMarkup_in_xmlInitialiser176);
            	    xmlMarkup4=xmlMarkup();

            	    state._fsp--;

            	    adaptor.addChild(root_0, xmlMarkup4.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            pushFollow(FOLLOW_xmlElement_in_xmlInitialiser179);
            xmlElement5=xmlElement();

            state._fsp--;

            adaptor.addChild(root_0, xmlElement5.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (LinkedListTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
             finally {
        }
        return retval;
    }
    // $ANTLR end "xmlInitialiser"

    public static class xmlListInitialiser_return extends ParserRuleReturnScope {
        LinkedListTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "xmlListInitialiser"
    // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:100:1: xmlListInitialiser : '<>' ( xmlElementContent )* '</>' -> ^( XML_LIST ( xmlElementContent )* ) ;
    public final E4XParser.xmlListInitialiser_return xmlListInitialiser() throws RecognitionException {
        E4XParser.xmlListInitialiser_return retval = new E4XParser.xmlListInitialiser_return();
        retval.start = input.LT(1);

        LinkedListTree root_0 = null;

        Token string_literal6=null;
        Token string_literal8=null;
        E4XParser.xmlElementContent_return xmlElementContent7 = null;


        LinkedListTree string_literal6_tree=null;
        LinkedListTree string_literal8_tree=null;
        RewriteRuleTokenStream stream_28=new RewriteRuleTokenStream(adaptor,"token 28");
        RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");
        RewriteRuleSubtreeStream stream_xmlElementContent=new RewriteRuleSubtreeStream(adaptor,"rule xmlElementContent");
        try {
            // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:101:2: ( '<>' ( xmlElementContent )* '</>' -> ^( XML_LIST ( xmlElementContent )* ) )
            // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:101:4: '<>' ( xmlElementContent )* '</>'
            {
            string_literal6=(Token)match(input,28,FOLLOW_28_in_xmlListInitialiser190);  
            stream_28.add(string_literal6);

            // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:101:9: ( xmlElementContent )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( ((LA3_0>=XML_COMMENT && LA3_0<=XML_LCHEVRON)||(LA3_0>=XML_NAME && LA3_0<=EOL)||LA3_0==30||LA3_0==32) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:101:9: xmlElementContent
            	    {
            	    pushFollow(FOLLOW_xmlElementContent_in_xmlListInitialiser192);
            	    xmlElementContent7=xmlElementContent();

            	    state._fsp--;

            	    stream_xmlElementContent.add(xmlElementContent7.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            string_literal8=(Token)match(input,29,FOLLOW_29_in_xmlListInitialiser195);  
            stream_29.add(string_literal8);



            // AST REWRITE
            // elements: xmlElementContent
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (LinkedListTree)adaptor.nil();
            // 102:3: -> ^( XML_LIST ( xmlElementContent )* )
            {
                // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:102:6: ^( XML_LIST ( xmlElementContent )* )
                {
                LinkedListTree root_1 = (LinkedListTree)adaptor.nil();
                root_1 = (LinkedListTree)adaptor.becomeRoot((LinkedListTree)adaptor.create(XML_LIST, "XML_LIST"), root_1);

                // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:102:17: ( xmlElementContent )*
                while ( stream_xmlElementContent.hasNext() ) {
                    adaptor.addChild(root_1, stream_xmlElementContent.nextTree());

                }
                stream_xmlElementContent.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (LinkedListTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
             finally {
        }
        return retval;
    }
    // $ANTLR end "xmlListInitialiser"

    public static class xmlMarkup_return extends ParserRuleReturnScope {
        LinkedListTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "xmlMarkup"
    // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:105:1: xmlMarkup : ( XML_COMMENT | XML_CDATA | XML_PI );
    public final E4XParser.xmlMarkup_return xmlMarkup() throws RecognitionException {
        E4XParser.xmlMarkup_return retval = new E4XParser.xmlMarkup_return();
        retval.start = input.LT(1);

        LinkedListTree root_0 = null;

        Token set9=null;

        LinkedListTree set9_tree=null;

        try {
            // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:106:2: ( XML_COMMENT | XML_CDATA | XML_PI )
            // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:
            {
            root_0 = (LinkedListTree)adaptor.nil();

            set9=(Token)input.LT(1);
            if ( (input.LA(1)>=XML_COMMENT && input.LA(1)<=XML_PI) ) {
                input.consume();
                adaptor.addChild(root_0, (LinkedListTree)adaptor.create(set9));
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (LinkedListTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
             finally {
        }
        return retval;
    }
    // $ANTLR end "xmlMarkup"

    public static class xmlElement_return extends ParserRuleReturnScope {
        LinkedListTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "xmlElement"
    // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:111:1: xmlElement : ( XML_LCHEVRON xmlTagContent -> xmlTagContent ) ( RCLOSE -> ^( XML_EMPTY_ELEMENT $xmlElement) | XML_RCHEVRON ( xmlElementContent )* LCLOSE xmlTagName XML_RCHEVRON -> ^( XML_ELEMENT $xmlElement ^( XML_ELEMENT_CONTENT ( xmlElementContent )* ) ) ) ;
    public final E4XParser.xmlElement_return xmlElement() throws RecognitionException {
        E4XParser.xmlElement_return retval = new E4XParser.xmlElement_return();
        retval.start = input.LT(1);

        LinkedListTree root_0 = null;

        Token XML_LCHEVRON10=null;
        Token RCLOSE12=null;
        Token XML_RCHEVRON13=null;
        Token LCLOSE15=null;
        Token XML_RCHEVRON17=null;
        E4XParser.xmlTagContent_return xmlTagContent11 = null;

        E4XParser.xmlElementContent_return xmlElementContent14 = null;

        E4XParser.xmlTagName_return xmlTagName16 = null;


        LinkedListTree XML_LCHEVRON10_tree=null;
        LinkedListTree RCLOSE12_tree=null;
        LinkedListTree XML_RCHEVRON13_tree=null;
        LinkedListTree LCLOSE15_tree=null;
        LinkedListTree XML_RCHEVRON17_tree=null;
        RewriteRuleTokenStream stream_XML_RCHEVRON=new RewriteRuleTokenStream(adaptor,"token XML_RCHEVRON");
        RewriteRuleTokenStream stream_RCLOSE=new RewriteRuleTokenStream(adaptor,"token RCLOSE");
        RewriteRuleTokenStream stream_XML_LCHEVRON=new RewriteRuleTokenStream(adaptor,"token XML_LCHEVRON");
        RewriteRuleTokenStream stream_LCLOSE=new RewriteRuleTokenStream(adaptor,"token LCLOSE");
        RewriteRuleSubtreeStream stream_xmlTagName=new RewriteRuleSubtreeStream(adaptor,"rule xmlTagName");
        RewriteRuleSubtreeStream stream_xmlTagContent=new RewriteRuleSubtreeStream(adaptor,"rule xmlTagContent");
        RewriteRuleSubtreeStream stream_xmlElementContent=new RewriteRuleSubtreeStream(adaptor,"rule xmlElementContent");
        try {
            // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:112:2: ( ( XML_LCHEVRON xmlTagContent -> xmlTagContent ) ( RCLOSE -> ^( XML_EMPTY_ELEMENT $xmlElement) | XML_RCHEVRON ( xmlElementContent )* LCLOSE xmlTagName XML_RCHEVRON -> ^( XML_ELEMENT $xmlElement ^( XML_ELEMENT_CONTENT ( xmlElementContent )* ) ) ) )
            // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:112:4: ( XML_LCHEVRON xmlTagContent -> xmlTagContent ) ( RCLOSE -> ^( XML_EMPTY_ELEMENT $xmlElement) | XML_RCHEVRON ( xmlElementContent )* LCLOSE xmlTagName XML_RCHEVRON -> ^( XML_ELEMENT $xmlElement ^( XML_ELEMENT_CONTENT ( xmlElementContent )* ) ) )
            {
            // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:112:4: ( XML_LCHEVRON xmlTagContent -> xmlTagContent )
            // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:112:5: XML_LCHEVRON xmlTagContent
            {
            XML_LCHEVRON10=(Token)match(input,XML_LCHEVRON,FOLLOW_XML_LCHEVRON_in_xmlElement239);  
            stream_XML_LCHEVRON.add(XML_LCHEVRON10);

            pushFollow(FOLLOW_xmlTagContent_in_xmlElement241);
            xmlTagContent11=xmlTagContent();

            state._fsp--;

            stream_xmlTagContent.add(xmlTagContent11.getTree());


            // AST REWRITE
            // elements: xmlTagContent
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (LinkedListTree)adaptor.nil();
            // 112:32: -> xmlTagContent
            {
                adaptor.addChild(root_0, stream_xmlTagContent.nextTree());

            }

            retval.tree = root_0;
            }

            // C:\\Users\\Teoti\\Documents\\Flash\\OpenSource\\jas-blocks\\jasblocks-antlr\\org\\as3commons\\asblocks\\parser\\antlr\\e4x\\E4X.g:113:3: ( RCLOSE -> ^( XML_EMPTY_ELEMENT $xmlElement) | XML_RCHEVRON ( xmlElementContent )* LCLOSE xmlTagName XML_RCHEVRON -> ^( XML_ELEMENT $xmlElement ^( XML_ELEMENT_CONTENT ( xmlElementContent )* ) ) )
            int alt5=2;
            int LA5_0 = input.LA(1);
